--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.2.2",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -24,6 +26,7 @@
         "react-refresh": "^0.9.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "webpack-livereload-plugin": "^1.2.0"
     }
 }
